// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Vue — diagnostics > errors on unsupported file extension > unsupported-extension-diagnostics 1`] = `
"No LSP server configured for "fixtures/test.xyz".

Supported languages: typescript, python, rust, go, java, cpp, csharp, php, ruby, lua, html, css, json, yaml, markdown, dart, kotlin, swift, zig, haskell, ocaml, elixir, scala, terraform, dockerfile, sql, vue, svelte, toml, nix, latex, r, bash"
`;

exports[`Vue — diagnostics > reports diagnostics for multiple files > multi-file-diagnostics 1`] = `
"Diagnostics for fixtures/valid.vue (vue):
0 error(s), 0 warning(s), 0 info message(s)

No issues found.

---

Diagnostics for fixtures/broken.vue (vue):
0 error(s), 0 warning(s), 0 info message(s)

No issues found."
`;

exports[`Vue — diagnostics > reports errors for a broken file > broken-vue-diagnostics 1`] = `
"Diagnostics for fixtures/broken.vue (vue):
0 error(s), 0 warning(s), 0 info message(s)

No issues found."
`;

exports[`Vue — diagnostics > reports no diagnostics for a valid file > valid-vue-diagnostics 1`] = `
"Diagnostics for fixtures/valid.vue (vue):
0 error(s), 0 warning(s), 0 info message(s)

No issues found."
`;
